--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/devligue"><i class="fab fa-github"></i></a>
-			<a target="_blank" href="www.linkedin.com/in/krzysztof-dziadowiec"><i class="fab fa-linkedin"></i></a>
+			<a target="_blank" href="https://www.linkedin.com/in/krzysztof-dziadowiec/"><i class="fab fa-linkedin"></i></a>
 			<a target="_blank" href="https://twitter.com/devligue"><i class="fab fa-twitter"></i></a>
 			<!-- <a target="_blank" href="https://stackoverflow.com/story/devligue"><i class="fab fa-stack-overflow"></i></a> -->
 			<!-- <a target="_blank" href="https://medium.com/"><i class="fab fa-medium"></i></a> -->
