--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 <body>
 	<main>
 		<div class="intro">Hello, I'm Christopher!</div>
-		<div class="tagline">Software Dev | Full Stack Dev | Coffee Lover</div>
+		<div class="tagline">Software Developer | Python Enthusiast | Coffee Lover</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/devligue"><i class="fab fa-github"></i></a>
 			<a target="_blank" href="https://www.linkedin.com/in/krzysztof-dziadowiec/"><i class="fab fa-linkedin"></i></a>
 			<a target="_blank" href="https://twitter.com/devligue"><i class="fab fa-twitter"></i></a>
-			<!-- <a target="_blank" href="https://stackoverflow.com/story/devligue"><i class="fab fa-stack-overflow"></i></a> -->
+			<a target="_blank" href="https://stackoverflow.com/story/devligue"><i class="fab fa-stack-overflow"></i></a>
 			<!-- <a target="_blank" href="https://medium.com/"><i class="fab fa-medium"></i></a> -->
 			<!-- <a target="_blank" href="https://www.freecodecamp.org"><i class="fab fa-free-code-camp"></i></a> -->
 			<!-- <a target="_blank" href="https://www.behance.net"><i class="fab fa-behance"></i></a> -->
